--- a/debian/rules
+++ b/debian/rules
@@ -29,6 +29,7 @@ configure:
 build: build-stamp
 
 build-stamp:  config.status
+	$(QUILT_STAMPFN)
 	dh_testdir
 
 	# Add here commands to compile the package.
@@ -37,7 +38,7 @@ build-stamp:  config.status
 
 	touch build-stamp
 
-clean:
+clean: unpatch
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp 
